# eov-annotations-plugin

./: .gitignore  Cargo.toml  README.md  plugin.toml
.github/workflows/: build-linux-eop.yml  build-macos-eop.yml  build-windows-eop.yml  release.yml
scripts/: package_eop.py
src/: db.rs  history.rs  lib.rs  model.rs  operations.rs  sidebar.rs  state.rs
ui/: annotations-sidebar-types.slint  annotations-sidebar-widgets.slint  annotations-sidebar.slint  delete-layer-dialog.slint  metadata-settings-dialog.slint  theme.slint
