[package]
name = "annotations"
version = "0.1.6"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abi_stable = { version = "0.11", default-features = false }
common = { path = "../../common" }
plugin_api = { path = "../../plugin_api" }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }